--- a/react-app/src/sass-style.css
+++ b/react-app/src/sass-style.css
@@ -569,4 +569,34 @@ body {
     transform: scale(1);
     opacity: 1;
   }
+}
+.counter {
+  margin-top: 50px;
+  text-align: center;
+}
+.counter .title {
+  text-align: left;
+}
+.counter p {
+  font-size: 28px;
+  margin: 20px 0;
+  text-align: center;
+}
+.counter button {
+  padding: 5px 10px;
+  margin: 0 10px;
+  cursor: pointer;
+}
+
+.new-work {
+  margin-bottom: 50px;
+}
+.new-work input {
+  margin: 10px 0;
+  height: 20px;
+}
+.new-work button {
+  cursor: pointer;
+  padding: 5px 10px;
+  margin-top: 20px;
 }/*# sourceMappingURL=sass-style.css.map */
