--- a/react-app/src/sass-style.scss
+++ b/react-app/src/sass-style.scss
@@ -278,7 +278,7 @@ body {
     font-size: 16px;
     line-height: 150%;
     letter-spacing: 0.01em;
-    background: url(./img/mdi_arrow_drop_down.svg) no-repeat center right 0.75rem;
+    background: url(./mdi_arrow_drop_down.svg) no-repeat center right 0.75rem;
     cursor: pointer;
   }
   .success, .error {
@@ -360,5 +360,36 @@ body {
   to {
     transform: scale(1);
     opacity: 1;
+  }
+}
+
+.counter {
+  margin-top: 50px;
+  text-align: center;
+  .title {
+    text-align: left;
+  }
+  p {
+    font-size: 28px;
+    margin: 20px 0;
+    text-align: center;
+  }
+  button {
+    padding: 5px 10px;
+    margin: 0 10px;
+    cursor: pointer;
+  }
+}
+
+.new-work {
+  margin-bottom: 50px;
+  input {
+    margin: 10px 0;
+    height: 20px;
+  }
+  button {
+    cursor: pointer;
+    padding: 5px 10px;
+    margin-top: 20px;
   }
 }
